--- a/res/layout/home.xml
+++ b/res/layout/home.xml
@@ -9,4 +9,11 @@
         android:layout_height="wrap_content"
         android:text="@string/hello" />
 
+    <Button
+        android:id="@+id/startCamera"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="0.44"
+        android:text="Start Camera" />
+
 </LinearLayout>
